# tis-cli

./: Cargo.toml  README.md  fibbonaci.tis
examples/: echo.tis  fibbonaci.tis  number_echo.tis
src/: direction.rs  instruction.rs  main.rs  node.rs  number.rs  parse_tis.rs  position.rs  register.rs  tis.rs  utils.rs
src/node/: console_node.rs  instruction_node.rs  number_console_node.rs
src/parse_tis/: parse_code.rs  parse_settings.rs
