[package]
name = "tis-cli"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/BlockOG/tis-cli"
readme = "README.md"
description = "TIS-100 emulator"
keywords = ["tis", "tis-100", "emulator", "cli"]
authors = ["BlockOG"]

[dependencies]
enum-iterator = "1.4.1"
logos = "0.13.0"
num-traits = "0.2.15"
